--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -17,5 +17,6 @@
     - include: init_setup.yml
     - include: cli_setup.yml
     - include: py3-setup.yml
+    - include: celery-redis.yml
 #    - include: py3-math-setup.yml
 #    - include: py3-parallel-setup.yml
